# diwasp-python

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: DEPLOYMENT.md
.github/workflows/: docs.yml  publish-pypi.yml  tests.yml
diwasp/: __init__.py  core.py  spectrum.py  types.py  utils.py  wrapper.py
diwasp/methods/: base.py  bdm.py  dftm.py  emep.py  emlm.py  imlm.py
docs/: api_reference.md  conf.py  data_structures.md  estimation_methods.md  file_format.md  index.md  index.rst  installation.md  references.md  wrapper.md
examples/: NOTEBOOK_NOTES.md  README.md  demo_analysis.ipynb
tests/: __init__.py  test_dirspec.py  test_end_to_end.py  test_methods.py  test_transfer.py  test_utils.py  test_wrapper.py
