[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diwasp"
version = "0.1.0"
description = "DIrectional WAve SPectrum analysis - Python port of the DIWASP Matlab toolbox"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "David Johnson", email = "david.johnson@uwa.edu.au"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["waves", "oceanography", "spectral analysis", "directional spectrum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "xarray>=0.19",
    "wavespectra>=4.0",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "pydata-sphinx-theme>=0.13",
    "myst-parser>=2.0",
    "sphinx-gallery>=0.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/diwasp-python"
Documentation = "https://diwasp-python.readthedocs.io"
Repository = "https://github.com/yourusername/diwasp-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["diwasp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
